# detective

./: .env.example  .env.local  .env.local.example  .gitignore  .implementation-summary.md  HACKATHON_SUBMISSION.md  LATENCY_IMPROVEMENTS.md  MIGRATION_SUMMARY.md  PRODUCTION_CHAT_FIX.md  README.md  REGISTRATION_UX.md  ROADMAP.md  TIMING_FIXES_SUMMARY.txt  UI_UPGRADE.md  ecosystem.config.js  eslint.config.mjs  foundry.toml  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
.analysis/: round_progression_fix.md
.githooks/: pre-commit
.orchids/: orchids.json
cache/: solidity-files-cache.json
contracts/: DetectiveGameEntry.sol  DetectiveGameEntryV4.sol
contracts/stylus-verifier/: Cargo.toml
contracts/stylus-verifier/src/: main.rs
docs/: ACCESS.md  ACCESS_CONTROL_QUICKSTART.md  ACCESS_CONTROL_SECURITY.md  ACCESS_GATING.md  ADVANCED.md  ARCHITECTURE.md  AUTH_IMPLEMENTATION.md  BUGFIX_CHAT_DISAPPEARING.md  CODEBASE_AUDIT.md  CONTRACT_DEPLOYMENT.md  CORE_ARCHITECTURE.md  DEMO_SCRIPT.md  DEVELOPMENT.md  DOCS_01_OVERVIEW_ARCHITECTURE.md  DOCS_02_DEVELOPMENT_GUIDE.md  GAME_DESIGN.md  GAME_DESIGN_UIUX.md  GAME_FLOW_UPDATE.md  HACKATHON_PREP_CHECKLIST.md  HACKATHON_SUBMISSION.md  HARDENING_PLAN.md  HOMEPAGE_REDESIGN.md  IMPLEMENTATION.md  IMPLEMENTATION_ADVANCED.md  MIGRATION_SUMMARY.md  NEGOTIATION_COMPLETE.md  NEGOTIATION_MODE.md  NEGOTIATION_QUICK_START.md  NEGOTIATION_UI_PHASE2.md  OPTIMIZATION_ARENA_PITCH.md  OPTIMIZATION_ARENA_SUMMARY.md  PROGRESS_LOG.md  RESEARCH_API.md  RESEARCH_HARNESS.md  (+9 more)
(+258 files in other folders)
