[package]
name = "detective-stylus-verifier"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Arbitrum Stylus contract for verifiable game logic in the Detective game."

[dependencies]
stylus-sdk = "0.6.0"
alloy-primitives = "0.7.2"
alloy-sol-types = "0.7.2"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }

[features]
export-abi = ["stylus-sdk/export-abi"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
incremental = false
lto = true
opt-level = "s"
panic = "abort"
strip = true
